manifests/netpol/frontend-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-ingress
  namespace: gbk1-frontend
spec:
  podSelector:
    matchLabels:
      tier: frontend
      workspace: gbk1
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              tier: backend
              workspace: gbk1
      ports:
        - port: 6337
